--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ header, main, footer {
 
 header, footer, footer a {
     text-align: center;
-    background-color:#1a02f3;
+    background-color:#f3028f;
     color: whitesmoke;
 }
 
