--- a/css/main.css
+++ b/css/main.css
@@ -8,18 +8,18 @@ body {
     font-size: 16px; 
     line-height: 32px;
     font-family:Ubuntu,sans-serif;
-    color:#0b0c0b;
+    color:#06ff06;
 }
 
 h1 {
     font-size: 2rem;
-    color:#fafbff;
+    color:#fbfaff;
 }
 
 h2 {
     font-size: 1.5rem;
     text-align: center;
-    border-bottom: 2px solid #bbb;
+    border-bottom: 2px solid rgb(197, 0, 0);
 }
 
 header, main, footer {
